--- a/src/main/resources/templates/member/register.html
+++ b/src/main/resources/templates/member/register.html
@@ -1,64 +1,41 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">    
-    <title>롯데ON::롯데 온라인 쇼핑몰</title>
-	<link rel="shortcut icon" type="image/x-icon" th:href="@{/images/favicon.ico}" />
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-	<link rel="stylesheet" th:href="@{/css/common.css}"/>
-	<link rel="stylesheet" th:href="@{/css/member.css}"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://kit.fontawesome.com/20962f3e4b.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-</head>
+<html xmlns:th="http://www.thymeleaf.org"
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	  xmlns="http://www.w3.org/1999/html"
+	  layout:decorate="~{/member/member_layout.html}">
 <body>
     <div id="wrapper">
-        <header>
-            <div class="top">
-                <div>
-					<a th:href="@{/member/login}">로그인</a>
-					<a th:href="@{/member/join}">회원가입</a>
-                    <a href="#">마이페이지</a>
-                    <a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;장바구니</a>
-                </div>
-            </div>
-            <div class="logo">
-                <div>
-					<a th:href="@{/}"><img th:src="@{/images/header_logo.png}" alt="로고"/></a>
-                </div>
-            </div>
-        </header>
         <main id="member">
-            <div class="register">
+            <div class="register" layout:fragment="memberMain">
                 <nav>
                     <h1>일반 회원가입</h1>
                 </nav>
-				<form th:action="@{/member/register}" method="POST">
+				<form id="formMember" th:action="@{/member/register}" method="POST" th:object="${member}">
 					<section>
 						<table>
 							<caption>필수 정보입력</caption>
 							<tr>
 								<th><span class="essential">*</span>아이디</th>
 								<td>
-									<input type="text" name="km_uid" placeholder="아이디를 입력" required />
-									<span class="msgId">영문, 숫자로 4~12자까지 설정해 주세요.</span>
+									<input type="text" name="km_uid" placeholder="아이디를 입력" required th:field="*{uid}" th:maxlength="12"/>
+									<button type="button" id="btnId" class="btn btnCheck">조회</button>
+									<span class="msgId">영문, 숫자로 4~12자까지 설정해 주세요.</span> <br>
+									<span class="msgId1"></span>
 								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>비밀번호</th>
 								<td>
-									<input type="password" name="km_pass1" placeholder="비밀번호를 입력" required />
+									<input type="password" name="km_pass1" placeholder="비밀번호를 입력" required th:field="*{pass}" th:maxlength="12"/>
 									<span class="msgPass">영문, 숫자, 특수문자를 조합하여8~12자까지 설정해 주세요.</span>
 								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>비밀번호확인</th>
 								<td>
-									<input type="password" name="km_pass2" placeholder="비밀번호를 확인" required />
-									<span class="msgPass">비밀번호 재입력</span>
+									<input type="password" name="km_pass2" placeholder="비밀번호를 확인" required th:maxlength="12"/>
+									<span class="msgPass">비밀번호 재입력</span> <br>
+									<span class="msgPass1"></span>
 								</td>
 							</tr>
 						</table>
@@ -69,75 +46,59 @@
 							<tr>
 								<th><span class="essential">*</span>이름</th>
 								<td>
-									<input type="text" name="km_name" placeholder="이름을 입력" required />
+									<input type="text" name="km_name" placeholder="이름을 입력" required th:field="*{name}" /> <br>
+									<span class="msgName"></span>
 								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>성별</th>
 								<td>
-									<label><input type="radio" name="km_gender" value="1" checked>&nbsp;남</label>
-									<label><input type="radio" name="km_gender" value="2">&nbsp;여</label>
+									<label><input type="radio" name="km_gender" th:field="*{gender}" value="1" checked>&nbsp;남</label>
+									<label><input type="radio" name="km_gender" th:field="*{gender}" value="2">&nbsp;여</label>
 								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>EMAIL</th>
-								<td><input type="email" name="km_email" placeholder="이메일 입력"
-									required /></td>
+								<td>
+									<input type="email" name="km_email" placeholder="이메일 입력" required th:field="*{email}" /> <br>
+									<span class="msgEmail"></span>
+								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>휴대폰</th>
 								<td>
-									<input type="text" name="km_hp" maxlength="13" placeholder="휴대폰번호 입력" required />
-									<span class="msgHp"> -포함 13자리를 입력하세요.</span>
+									<input type="text" name="km_hp" maxlength="13" placeholder="휴대폰번호 입력" required th:field="*{hp}" th:maxlength="13"/>
+									<span class="msgHp"> -포함 13자리를 입력하세요.</span> <br>
+									<span class="msgHp1"></span>
 								</td>
 							</tr>
 							<tr class="addr">
 								<th>주소</th>
 								<td>
 									<div>
-										<input type="text" name="km_zip" id="zip" placeholder="우편번호 입력 클릭" readonly />
+										<input type="text" name="km_zip" id="zip" placeholder="우편번호 입력 클릭" readonly th:field="*{zip}" />
+										<button type="button" class="btn btnCheck" id="btnZip" onclick="zipcode()">찾기</button>
 									</div>
 									<div>
-										<input type="text" name="km_addr1" id="addr1" size="50" placeholder="주소를 검색하세요." readonly />
+										<input type="text" name="km_addr1" id="addr1" size="50" placeholder="주소를 검색하세요." readonly  th:field="*{addr1}"/>
 									</div>
 									<div>
-										<input type="text" name="km_addr2" id="addr2" size="50" placeholder="상세주소를 입력하세요." />
+										<input type="text" name="km_addr2" id="addr2" size="50" placeholder="상세주소를 입력하세요." th:field="*{addr2}" />
 									</div>
 								</td>
 							</tr>
 						</table>
-		
 					</section>
 					<div>
 						<input type="submit" class="join" value="회원가입" />
 					</div>
 				</form>
+				<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+				<script th:src="@{/js/zipcode.js}"></script>
+				<script th:src="@{/js/validation.js}"></script>
+				<script th:src="@{/js/memberCheck.js}"></script>
             </div>
-        </main>        
-        <footer>
-            <ul>
-              <li><a href="#">회사소개</a></li>
-              <li><a href="#">서비스이용약관</a></li>
-              <li><a href="#">개인정보처리방침</a></li>
-              <li><a href="#">전자금융거래약관</a></li>
-            </ul>
-            <div>
-              <p><img th:src="@{/images/footer_logo.png}" alt="로고" /></p>
-              <p>
-                <strong>(주)롯데ON</strong><br />
-                서울특별시 송파구 올림픽로 300 롯데월드타워 26층 (역삼동 강남파이낸스센터)<br />
-                대표이사 : 김사무엘상현, 정준호, 강성현<br />
-                사업자등록번호 : 529-85-00774(롯데쇼핑(주) e커머스사업부)<br />
-                통신판매업 신고 : 서울송파 제0158호<br>
-                호스팅 서비스사업자 : 롯데쇼핑(주) e커머스사업부
-              </p>
-              <p>
-                <strong>고객센터</strong><br />
-                Tel : 1899-7000(유료) (평일 09:00~18:00)<br />
-                Fax : 051-123-4567 | E-mail : lotteon@lotte.net<br />
-              </p>
-            </div>
-          </footer>
+        </main>
     </div>    
 </body>
 </html>
