--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns="http://www.w3.org/1999/html"
-      layout:decorate="~{/member/layout.html}">
+      layout:decorate="~{/member/member_layout.html}">
 <body>
     <div id="wrapper">
         <main id="member">
@@ -11,7 +11,7 @@
                     <h1>로그인</h1>                    
                 </nav>
                 
-				<form action="#">
+				<form role="form" th:action="@{/member/login}" method="post">
 
                     <table border="0">
                         <tr>
