--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -80,7 +80,7 @@
         </div>
         <div class="logo">
           <div>
-            <a href="#"><img th:src="@{/images/header_logo.png}" alt="로고" /></a>
+            <a th:href="@{/}"><img th:src="@{/images/header_logo.png}" alt="로고" /></a>
             <form action="#">
               <input type="text" name="search" />
               <button><i class="fa fa-search"></i></button>
@@ -111,56 +111,12 @@
           <!-- 카테고리 -->
           <ul class="category">
             <li><i class="fa fa-bars" aria-hidden="true"></i>카테고리</li>
-            <li>
-              <a href="#"
-                ><i class="fas fa-tshirt"></i>패션·의류·뷰티<i
-                  class="fas fa-angle-right"
-                ></i
-              ></a>
+            <li th:each="cate1:${cate1List}">
+              <a href="#"><i th:class="${cate1.c1Icon}"></i>[[${cate1.c1Name}]]</a>
               <ol>
-                <li><a href="#">남성의류</a></li>
-                <li><a href="#">여성의류</a></li>
-                <li><a href="#">잡화</a></li>
-                <li><a href="#">뷰티</a></li>
-              </ol>
-            </li>
-            <li>
-              <a href="#"
-                ><i class="fas fa-laptop"></i>가전·디지털<i
-                  class="fas fa-angle-right"
-                ></i
-              ></a>
-              <ol>
-                <li><a href="#">노트북/PC</a></li>
-                <li><a href="#">가전</a></li>
-                <li><a href="#">휴대폰</a></li>
-                <li><a href="#">기타</a></li>
-              </ol>
-            </li>
-            <li>
-              <a href="#"
-                ><i class="fas fa-utensils"></i>식품·생필품<i
-                  class="fas fa-angle-right"
-                ></i
-              ></a>
-              <ol>
-                <li><a href="#">신선식품</a></li>
-                <li><a href="#">가공식품</a></li>
-                <li><a href="#">건강식품</a></li>
-                <li><a href="#">생필품</a></li>
-              </ol>
-            </li>
-            <li>
-              <a href="#"
-                ><i class="fas fa-home"></i>홈·문구·취미<i
-                  class="fas fa-angle-right"
-                ></i
-              ></a>
-              <ol>
-                <li><a href="#">가구/DIY</a></li>
-                <li><a href="#">침구·커튼</a></li>
-                <li><a href="#">생활용품</a></li>
-                <li><a href="#">사무용품</a></li>
+                <li th:each="cate2:${cate2List}" th:if="${cate1.cate1 == cate2.cate1.cate1}">
+                  <a th:href="@{/product/list(prodCate1=${cate1.cate1},prodCate2=${cate2.cate2})}">[[${cate2.c2Name}]]</a>
+                </li>
               </ol>
             </li>
           </ul>
@@ -853,30 +809,10 @@
           </section>
         </section>
       </main>
-      <footer>
-        <ul>
-          <li><a href="#">회사소개</a></li>
-          <li><a href="#">서비스이용약관</a></li>
-          <li><a href="#">개인정보처리방침</a></li>
-          <li><a href="#">전자금융거래약관</a></li>
-        </ul>
-        <div>
-          <p><img th:src="@{/images/footer_logo.png}" alt="로고" /></p>
-          <p>
-            <strong>(주)롯데ON</strong><br />
-            서울특별시 송파구 올림픽로 300 롯데월드타워 26층 (역삼동 강남파이낸스센터)<br />
-            대표이사 : 김사무엘상현, 정준호, 강성현<br />
-            사업자등록번호 : 529-85-00774(롯데쇼핑(주) e커머스사업부)<br />
-            통신판매업 신고 : 서울송파 제0158호<br>
-            호스팅 서비스사업자 : 롯데쇼핑(주) e커머스사업부
-          </p>
-          <p>
-            <strong>고객센터</strong><br />
-            Tel : 1899-7000(유료) (평일 09:00~18:00)<br />
-            Fax : 051-123-4567 | E-mail : lotteon@lotte.net<br />
-            App Version:LotteOn-0.0.3-SNAPSHOT<br/>
-          </p>
-        </div>
+      <footer th:replace="~{/fragments/footer}">
+        <!--
+          푸터
+        -->
       </footer>
       <button type="button" id="top">상단이동</button>
     </div>
