--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{/product/layout.html}">
+      layout:decorate="~{/fragments/product_Layout.html}">
     <section layout:fragment="content" class="list">
             <!-- 제목, 페이지 네비게이션 -->
             <nav>
@@ -11,37 +11,37 @@
 
             <!-- 정렬 메뉴 -->
             <ul class="sort">
-                <li><a href="#" class="on">판매많은순</a></li>
-                <li><a href="#">낮은가격순</a></li>
-                <li><a href="#">높은가격순</a></li>
-                <li><a href="#">평점높은순</a></li>
-                <li><a href="#">후기많은순</a></li>
-                <li><a href="#">최근등록순</a></li>
+                <li><a th:href="@{/product/list(prodCate1=${pageRequestDTO.prodCate1},prodCate2=${pageRequestDTO.prodCate2}, type='sold')}" th:class="${pageRequestDTO.type eq 'sold' ? 'on' : 'off'}">판매많은순</a></li>
+                <li><a th:href="@{/product/list(prodCate1=${pageRequestDTO.prodCate1},prodCate2=${pageRequestDTO.prodCate2}, type='priceAsc')}" th:class="${pageRequestDTO.type eq 'priceAsc' ? 'on' : 'off'}">낮은가격순</a></li>
+                <li><a th:href="@{/product/list(prodCate1=${pageRequestDTO.prodCate1},prodCate2=${pageRequestDTO.prodCate2}, type='priceDesc')}" th:class="${pageRequestDTO.type eq 'priceDesc' ? 'on' : 'off'}">높은가격순</a></li>
+                <li><a th:href="@{/product/list(prodCate1=${pageRequestDTO.prodCate1},prodCate2=${pageRequestDTO.prodCate2}, type='score')}" th:class="${pageRequestDTO.type eq 'score' ? 'on' : 'off'}">평점높은순</a></li>
+                <li><a th:href="@{/product/list(prodCate1=${pageRequestDTO.prodCate1},prodCate2=${pageRequestDTO.prodCate2}, type='review')}" th:class="${pageRequestDTO.type eq 'review' ? 'on' : 'off'}">후기많은순</a></li>
+                <li><a th:href="@{/product/list(prodCate1=${pageRequestDTO.prodCate1},prodCate2=${pageRequestDTO.prodCate2}, type='rdate')}" th:class="${pageRequestDTO.type eq 'rdate' ? 'on' : 'off'}">최근등록순</a></li>
             </ul>
 
             <!-- 상품목록 -->
             <table border="0">
                 <tr th:each="product:${products.dtoList}">
-                    <td><a href="#" class="thumb"><img src="https://via.placeholder.com/120x120" alt="상품이미지"/></a></td>
+                    <td><a th:href="@{/product/view(prodNo=${product.prodNo})}" class="thumb"><img src="https://via.placeholder.com/120x120" alt="상품이미지"/></a></td>
                     <td>
-                        <h3 class="name">[[${product.prodName}]]</h3>
-                        <a href="#" class="desc">[[${product.descript}]]</a>
+                        <h3 class="name"><a th:href="@{/product/view(prodNo=${product.prodNo})}">[[${product.prodName}]]</a></h3>
+                        <a th:href="@{/product/view(prodNo=${product.prodNo})}" class="desc">[[${product.descript}]]</a>
                     </td>
                     <td>
                         <ul>
-                            <li><ins class="dis-price">[[${product.price - ((product.price/100)*product.discount)}]]</ins></li>
+                            <li><ins class="dis-price" th:text="${#numbers.formatInteger(product.price - ((product.price/100)*product.discount), 0, 'COMMA')}"></ins></li>
                             <li>
-                                <del class="org-price" th:if="${product.discount ne 0}">[[${product.price}]]</del>
+                                <del class="org-price" th:if="${product.discount ne 0}" th:text="${#numbers.formatInteger(product.price, 0, 'COMMA')}"></del>
                                 <span class="discount" th:if="${product.discount ne 0}">[[${product.discount}]]%</span>
                             </li>
                             <li><span class="free-delivery" th:if="${product.delivery eq 0}">무료배송</span></li>
-                            <li><span class="free-delivery" th:if="${product.delivery ne 0}">[[${product.delivery}]]원</span></li>
+                            <li><span class="delivery" th:if="${product.delivery ne 0}" th:text="'배송비 '+${#numbers.formatInteger(product.delivery, 0, 'COMMA')}+'원'"></span></li>
                         </ul>
                     </td>
                     <td>
-                        <h4 class="seller"><i class="fas fa-home"></i>&nbsp;판매자</h4>
-                        <h5 class="badge power">판매자등급</h5>
-                        <h6 class="rating star1">상품평</h6>
+                        <h4 class="seller"><i class="fas fa-home"></i>&nbsp;[[${product.seller.company}]]</h4>
+                        <h5 th:class="'badge '+${product.seller.level eq 4 ? 'power':(product.seller.level eq 5?'great':(product.seller.level eq 6 ?'power great':''))}">판매자등급</h5>
+                        <h6 th:class="'rating star'+${product.score}">상품평[[${product.score eq 0 ? '이 없습니다.': ' '}]]</h6>
                     </td>
                 </tr>
 
@@ -49,19 +49,17 @@
 
             <!-- 상품목록 페이지번호 -->
             <div class="paging">
-                <span class="prev">
+                <span th:href="@{/product/list(prodCate1=${pageRequestDTO.prodCate1},prodCate2=${pageRequestDTO.prodCate2}, pg=${pageResponseDTO.start-1})}"
+                      class="prev" th:if="${pageResponseDTO.prev}">
                   <a href="#"><&nbsp;이전</a>
                 </span>
                 <span class="num">
-                  <a href="#" class="on">1</a>
-                  <a href="#">2</a>
-                  <a href="#">3</a>
-                  <a href="#">4</a>
-                  <a href="#">5</a>
-                  <a href="#">6</a>
-                  <a href="#">7</a>
+                    <th:block th:each="num:${#numbers.sequence(pageResponseDTO.start, pageResponseDTO.end)}">
+                  <a th:href="@{/product/list(prodCate1=${pageRequestDTO.prodCate1},prodCate2=${pageRequestDTO.prodCate2},pg=${num})}" class="on"  th:classappend="${pageResponseDTO.pg eq num ? 'num on' : 'num'}">[[${num}]]</a>
+                    </th:block>
                 </span>
-                <span class="next">
+                <span th:href="@{/product/list(prodCate1=${pageRequestDTO.prodCate1},prodCate2=${pageRequestDTO.prodCate2}, pg=${pageResponseDTO.end+1})}"
+                      class="next" th:if="${pageResponseDTO.next}">
                   <a href="#">다음&nbsp;></a>
                 </span>
             </div>
