문의사항 작성 기능 구현 및 자주묻는질문 리스트 구현 중

--- a/src/main/resources/templates/cs/faq/list.html
+++ b/src/main/resources/templates/cs/faq/list.html
@@ -1,30 +1,13 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/cs/fragments/layout :: content}">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script>
-  $(function(){
-    $('.more').click(function(e){
-      e.preventDefault();
-
-      /*
-      let item = $(this).parent().find('> li:nth-child(n+4)');
-      let isVisible = item.is(':visible');
-
-      console.log('isVisible : ' + isVisible);
-
-      if(isVisible){
-        item.slideUp(100);
-      }else{
-        item.slideDown(100);
-      }
-      */
-
-    });
-  });
-</script>
+<head>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+  <script th:src="@{/js/faq.js}"></script>
+</head>
   <article layout:fragment="content">
     <nav th:replace="~{/cs/fragments/nav :: nav}">
       <!-- nav 들어올 영역 -->
