--- a/src/main/resources/templates/cs/fragments/layout.html
+++ b/src/main/resources/templates/cs/fragments/layout.html
@@ -7,6 +7,9 @@
     <title>롯데ON::고객센터</title>
     <link rel="shortcut icon" type="image/x-icon" th:href="@{/images/favicon.ico}"/>
     <link rel="stylesheet" th:href="@{/css/cs.css}" type="text/css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
   </head>
   <body>
     <div id="wrapper">
