--- a/src/main/resources/templates/cs/index.html
+++ b/src/main/resources/templates/cs/index.html
@@ -5,6 +5,7 @@
     <title>롯데ON::고객센터</title>
     <link rel="shortcut icon" type="image/x-icon" th:href="@{/images/favicon.ico}"/>
     <link rel="stylesheet" th:href="@{/css/cs.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
   </head>
   <body>
     <div id="wrapper">
@@ -45,26 +46,8 @@
             <h1>자주 묻는 질문<a th:href="@{/cs/faq/list}">전체보기</a>
             </h1>
             <ol>
-              <li>
-                <a th:href="@{/cs/faq/list(cate1=101)}"><span>회원</span></a>
-              </li>
-              <li>
-                <a th:href="@{/cs/faq/list(cate1=102)}"><span>쿠폰/이벤트</span></a>
-              </li>
-              <li>
-                <a th:href="@{/cs/faq/list(cate1=103)}"><span>주문/결제</span></a>
-              </li>
-              <li>
-                <a th:href="@{/cs/faq/list(cate1=104)}"><span>배송</span></a>
-              </li>
-              <li>
-                <a th:href="@{/cs/faq/list(cate1=105)}"><span>취소/반품/교환</span></a>
-              </li>
-              <li>
-                <a th:href="@{/cs/faq/list(cate1=106)}"><span>여행/숙박/항공</span></a>
-              </li>
-              <li>
-                <a th:href="@{/cs/faq/list(cate1=107)}"><span>안전거래</span></a>
+              <li th:each="faq:${cate1List}">
+                <a th:href="@{/cs/faq/list(cate1=${faq.cate1})}"><span>[[${faq.cate1_name}]]</span></a>
               </li>
             </ol>
           </section>
