--- a/src/main/resources/templates/cs/notice/view.html
+++ b/src/main/resources/templates/cs/notice/view.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{/cs/fragments/layout.html}">
+      layout:decorate="~{/fragments/cs_layout.html}">
   <article layout:fragment="content">
     <nav>
       <h2 class="title">[[${view.cate2.wrapping}]] [[${view.title}]]</h2>
