--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -2,4 +2,4 @@
 <html xmlns:th="http://www.thymeleaf.org/"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns="http://www.w3.org/1999/html"
-      layout:decorate="~{/admin/admin_layout.html}">
+      layout:decorate="~{/fragments/admin_layout.html}">
