--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -69,13 +69,10 @@
       <header>
         <div class="top">
           <div>
-            <a href="./member/login.html">로그인</a>
-            <a href="#">회원가입</a>
+            <a th:href="@{/member/login}">로그인</a>
+            <a th:href="@{/member/join}">회원가입</a>
             <a href="#">마이페이지</a>
-            <a href="#"
-              ><i class="fa fa-shopping-cart" aria-hidden="true"></i
-              >&nbsp;장바구니</a
-            >
+            <a th:href="@{/product/cart}"><i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;장바구니</a>
           </div>
         </div>
         <div class="logo">
