product list js 처리중

--- a/src/main/resources/templates/product/view.html
+++ b/src/main/resources/templates/product/view.html
@@ -19,25 +19,26 @@
                 </div>
                 <div class="summary">
                     <nav>
-                        <h1>(주)판매자명</h1>
-                        <h2>상품번호&nbsp;:&nbsp;<span>10010118412</span></h2>
+                        <h1>[[${product.seller.company}]]</h1>
+                        <h2>상품번호&nbsp;:&nbsp;<span>[[${product.prodNo}]]</span></h2>
                     </nav>
                     <nav>
-                        <h3>상품명</h3>
-                        <p>상품설명 출력</p>
+                        <h3>[[${product.prodName}]]</h3>
+                        <p>상품 설명: [[${product.descript}]]</p>
                         <h5 class="rating star4"><a href="#">상품평보기</a></h5>
                     </nav>
                     <nav>
                         <div class="org_price">
-                            <del>30,000</del>
-                            <span>10%</span>
+                            <del th:if="${product.discount ne 0}" th:text="${#numbers.formatInteger(product.price, 0, 'COMMA')}"></del>
+                            <span th:if="${product.discount ne 0}">[[${product.discount}]]%</span>
                         </div>
                         <div class="dis_price">
-                            <ins>27,000</ins>
+                            <ins th:text="${#numbers.formatInteger(product.price - ((product.price/100)*product.discount), 0, 'COMMA')}"></ins>
                         </div>
                     </nav>
                     <nav>
-                        <span class="delivery">무료배송</span>
+                        <span th:if="${product.delivery eq 0}" class="delivery">무료배송</span>
+                        <span th:if="${product.delivery ne 0}" th:text="'배송비 '+${#numbers.formatInteger(product.delivery, 0, 'COMMA')}+'원'" class="delivery">무료배송</span>
                         <span class="arrival">모레(금) 7/8 도착예정</span>
                         <span class="desc">본 상품은 국내배송만 가능합니다.</span>
                     </nav>
@@ -46,7 +47,7 @@
                         <span class="card cardadd"><i>아이콘</i>카드추가혜택</span>
                     </nav>
                     <nav>
-                        <span class="origin">원산지-상세설명 참조</span>
+                        <span class="origin">원산지-[[${product.origin}]]</span>
                     </nav>
                     <img src="../images/vip_plcc_banner.png" alt="100원만 결제해도 1만원 적립!" class="banner" />
 
@@ -88,31 +89,31 @@
                 <table border="0">
                     <tr>
                         <td>상품번호</td>
-                        <td>10110125435</td>
+                        <td>[[${product.prodNo}]]</td>
                     </tr>
                     <tr>
                         <td>상품상태</td>
-                        <td>새상품</td>
+                        <td>[[${product.status}]]</td>
                     </tr>
                     <tr>
                         <td>부가세 면세여부</td>
-                        <td>과세상품</td>
+                        <td>[[${product.duty}]]</td>
                     </tr>
                     <tr>
                         <td>영수증발행</td>
-                        <td>발행가능 - 신용카드 전표, 온라인 현금영수증</td>
+                        <td>[[${product.receipt}]]</td>
                     </tr>
                     <tr>
                         <td>사업자구분</td>
-                        <td>사업자 판매자</td>
+                        <td>[[${product.bizType}]]</td>
                     </tr>
                     <tr>
                         <td>브랜드</td>
-                        <td>블루포스</td>
+                        <td>[[${product.prodCompany}]]</td>
                     </tr>
                     <tr>
                         <td>원산지</td>
-                        <td>국내생산</td>
+                        <td>[[${product.origin}]]</td>
                     </tr>
                 </table>
                 <table border="0">
