--- a/src/main/resources/templates/fragments/product_layout.html
+++ b/src/main/resources/templates/fragments/product_layout.html
@@ -45,11 +45,11 @@
         <div class="menu">
             <div>
                 <ul>
-                    <li><a href="#">히트상품</a></li>
-                    <li><a href="#">추천상품</a></li>
-                    <li><a href="#">최신상품</a></li>
-                    <li><a href="#">인기상품</a></li>
-                    <li><a href="#">할인상품</a></li>
+                    <li><a th:href="@{/product/list(type='hit')}">히트상품</a></li>
+                    <li><a th:href="@{/product/list(type='recommend')}">추천상품</a></li>
+                    <li><a th:href="@{/product/list(type='latest')}">최신상품</a></li>
+                    <li><a th:href="@{/product/list(type='hot')}">인기상품</a></li>
+                    <li><a th:href="@{/product/list(type='discount')}">할인상품</a></li>
                 </ul>
                 <ul>
                     <li><a href="#">쿠폰존</a></li>
