--- a/src/main/resources/templates/cs/qna/write.html
+++ b/src/main/resources/templates/cs/qna/write.html
@@ -9,31 +9,25 @@
   <script th:src="@{/js/qna.js}"></script>
 </head>
   <article layout:fragment="content">
-    <form action="#" method="post" id="write">
+    <input type="hidden" name="url" th:value="${url}">
+    <form th:action="@{/cs/qna/write}" method="post" id="write">
+      <!-- uid는 나중에 session에 담긴 uid 정보 담기 -->
+      <input type="hidden" name="uid" value="a12345"/>
+      <input type="hidden" name="group" value="qna"/>
       <table>
         <tr>
           <td>문의유형</td>
           <td>
-            <!--no.. AUTO_INCREMENT ----- ----- ----- ----- ----- -->
-            <!--parent ----- ----- ----- ----- ----- -->
-            <!--uid ----- ----- ----- ----- ----- -->
-            <!--rdate ----- ----- ----- ----- ----- -->
-
-
-            <!--group ----- ----- ----- ----- ----- -->
-
-            <!--cate1 ----- ----- ----- ----- ----- -->
-            <select name="type1">
+            <select name="cate1">
               <option value="0">1차유형</option>
               <option th:each="ct1:${cate1}" th:value="${ct1.cate1}" th:selected="${ct1.cate1 eq pageRequestDTO.cate1}">
                 [[${ct1.cate1_name}]]
               </option>
             </select>
 
-            <!--cate2 ----- ----- ----- ----- ----- -->
-            <select name="type2">
+            <select name="cate2">
               <option value="0">2차유형</option>
-              <option th:each="ct2:${cate2}">
+              <option th:each="ct2:${cate2}" th:value="${ct2.cate2}">
                 [[${ct2.cate2_name}]]
               </option>
 
@@ -41,14 +35,12 @@
           </td>
         </tr>
         <tr>
-            <!--title ----- ----- ----- ----- ----- -->
           <td>문의제목</td>
           <td>
             <input type="text" name="title" placeholder="제목을 입력하세요."/>
           </td>
         </tr>
         <tr>
-            <!--content ----- ----- ----- ----- ----- -->
           <td>문의내용</td>
           <td>
             <textarea name="content" placeholder="내용을 입력하세요."></textarea>
