--- a/src/main/resources/templates/member/registerSeller.html
+++ b/src/main/resources/templates/member/registerSeller.html
@@ -11,21 +11,23 @@
 					<h1>판매자 회원가입</h1>
 				</nav>
                 
-				<form action="#" method="POST">
+				<form th:action="@{/member/registerSeller}" method="POST" th:object="${member}">
 					<section>
 						<table>
 							<caption>필수 정보입력</caption>
 							<tr>
 								<th><span class="essential">*</span>아이디</th>
 								<td>
-									<input type="text" name="km_uid" placeholder="아이디를 입력" required />
+									<input type="text" name="km_uid" placeholder="아이디를 입력" required th:field="*{uid}"/>
+									<button type="button" id="btnId" class="btn btnCheck">조회</button>
 									<span class="msgSId">&nbsp;&nbsp;영문, 숫자로4~12자까지 설정해 주세요.</span>
+									<span class="msgId1"></span>
 								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>비밀번호</th>
 								<td>
-									<input type="password" name="km_pass1" placeholder="비밀번호를 입력" required />
+									<input type="password" name="km_pass1" placeholder="비밀번호를 입력" required th:field="*{pass}" />
 									<span class="msgPass">&nbsp;&nbsp;영문,숫자, 특수문자를 조합하여 8~12자까지 설정해 주세요.</span>
 								</td>
 							</tr>
@@ -34,6 +36,7 @@
 								<td>
 									<input type="password" name="km_pass2" placeholder="비밀번호를 확인" required />
 									<span class="msgPass">&nbsp;&nbsp;비밀번호재입력</span>
+									<span class="msgPass1"></span>
 								</td>
 							</tr>
 						</table>
@@ -45,61 +48,69 @@
 							<tr>
 								<th><span class="essential">*</span>회사명</th>
 								<td>
-									<input type="text" name="kms_company" placeholder="회사명 입력" required />
-									<span class="msgCompany">&nbsp;&nbsp;(주)포함입력, 예) (주)케이마켓</span>
+									<input type="text" name="kms_company" placeholder="회사명 입력" required th:field="*{company}" />
+									<span class="msgCompany">&nbsp;&nbsp;(주)포함입력, 예) (주)케이마켓</span> <br>
+									<span class="msgCompany1"></span>
 								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>대표자</th>
 								<td>
-									<input type="text" name="kms_ceo" placeholder="대표자 입력" required />
+									<input type="text" name="kms_ceo" placeholder="대표자 입력" required th:field="*{ceo}" /> <br>
+									<span class="msgCeo"></span>
 								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>사업자등록번호</th>
 								<td>
-									<input type="text" name="kms_corp_reg" placeholder="사업자등록번호 입력" required />
-									<span class="msgCorp">&nbsp;&nbsp;-표시 포함 12자리 입력, 예) 123-45-67890</span>
+									<input type="text" name="kms_corp_reg" placeholder="사업자등록번호 입력" required th:field="*{bizRegNum}" />
+									<span class="msgCorp">&nbsp;&nbsp;-표시 포함 12자리 입력, 예) 123-45-67890</span> <br>
+									<span class="msgCorp1"></span>
 								</td>
 
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>통신판매업신고 번호</th>
 								<td>
-									<input type="text" name="kms_online_reg" placeholder="통신판매업신고 입력" required />
-									<span class="msgOnline">&nbsp;&nbsp;-표시 포함, 예) 강남-12345, 제 1-01-23-4567호, 2017-경기성남-0011</span>
+									<input type="text" name="kms_online_reg" placeholder="통신판매업신고 입력" required th:field="*{comRegNum}"/>
+									<span class="msgOnline">&nbsp;&nbsp;-표시 포함, 예) 강남-12345, 제 1-01-23-4567호, 2017-경기성남-0011</span> <br>
+									<span class="msgOnline1"></span>
 								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>전화번호</th>
-								<td><input type="text" name="kms_tel" placeholder="전화번호 입력" required />
-									<span class="msgTel">&nbsp;&nbsp;- 표시 포함,지역번호 포함, 예) 02-234-1234</span>
+								<td><input type="text" name="kms_tel" placeholder="전화번호 입력" required th:field="*{tel}" />
+									<span class="msgTel">&nbsp;&nbsp;- 표시 포함,지역번호 포함, 예) 02-234-1234</span> <br>
+									<span class="msgTel1"></span>
 								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>팩스번호</th>
 								<td>
-									<input type="text" name="kms_fax" placeholder="팩스번호 입력" required />
-									<span class="msgFax">&nbsp;&nbsp;- 표시 포함,지역번호 포함, 예) 02-234-1234</span>
+									<input type="text" name="kms_fax" placeholder="팩스번호 입력" required th:field="*{fax}" />
+									<span class="msgFax">&nbsp;&nbsp;- 표시 포함,지역번호 포함, 예) 02-234-1234</span> <br>
+									<span class="msgFax1"></span>
 								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>EMAIL</th>
 								<td>
-									<input type="email" name="km_email" placeholder="이메일 입력" required />
+									<input type="email" name="km_email" placeholder="이메일 입력" required th:field="*{email}"/>
+									<span class="msgEmail"></span>
 								</td>
 							</tr>
 							<tr class="addr">
 								<th>회사주소</th>
 								<td>
 									<div>
-										<input type="text" name="km_zip" id="zip" placeholder="우편번호 입력 클릭" readonly />
+										<input type="text" name="km_zip" id="zip" placeholder="우편번호 입력 클릭" readonly th:field="*{zip}"/>
+										<button type="button" class="btn btnCheck" id="btnZip" onclick="zipcode()">찾기</button>
 									</div>
 									<div>
-										<input type="text" name="km_addr1" id="addr1" size="50" placeholder="주소를 검색하세요." readonly />
+										<input type="text" name="km_addr1" id="addr1" size="50" placeholder="주소를 검색하세요." readonly th:field="*{addr1}" />
 									</div>
 									<div>
-										<input type="text" name="km_addr2" id="addr2" size="50" placeholder="상세주소를 입력하세요." />
+										<input type="text" name="km_addr2" id="addr2" size="50" placeholder="상세주소를 입력하세요." th:field="*{addr2}" />
 									</div>
 								</td>
 							</tr>
@@ -111,14 +122,16 @@
 							<tr>
 								<th><span class="essential">*</span>이름</th>
 								<td>
-									<input type="text" name="kms_manager" placeholder="이름을 입력" required />
+									<input type="text" name="kms_manager" placeholder="이름을 입력" required th:field="*{manager}" /> <br>
+									<span class="msgManager"></span>
 								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>휴대폰</th>
 								<td>
-									<input type="text" name="kms_managerHp" maxlength="13" placeholder="휴대폰번호 입력" required />
+									<input type="text" name="kms_managerHp" maxlength="13" placeholder="휴대폰번호 입력" required  th:field="*{managerHp}"/>
 									<span class="msgHp">&nbsp;&nbsp;-포함 13자리를 입력하세요.</span>
+									<span class="msgManagerHp1"></span>
 								</td>
 							</tr>
 						</table>
@@ -128,6 +141,10 @@
 						<input type="submit" class="join" value="회원가입" />
 					</div>
 				</form>
+				<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+				<script th:src="@{/js/zipcode.js}"></script>
+				<!--<script th:src="@{/js/validation.js}"></script> -- 후에 추가
+				<script th:src="@{/js/memberCheck.js}"></script>-->
             </div>
         </main>        
 
