admin product list ing

--- a/src/main/resources/templates/admin/product/list.html
+++ b/src/main/resources/templates/admin/product/list.html
@@ -135,7 +135,7 @@
 
                     <div class="paging">
                         <span class="prev">
-                            <a href="#"><&nbsp;이전</a>
+                            <a href="#">&nbsp;이전</a>
                         </span>
                         <span class="num">
                             <a href="#" class="on">1</a>
