--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -35,6 +35,19 @@
 
 				</form>
 				<img th:src="@{/images/member_certifi_logo.gif}" alt="banner">
+
+                <script>
+                    $(function (){
+                        const autoLogin = document.getElementsByName("auto")[0];
+
+                        /*autoLogin.addEventListener('change',function (){
+                            // 자동 로그인 체크
+                            if(autoLogin.checked){
+
+                            }
+                        });*/
+                    });
+                </script>
             </div>
         </main>        
 
