--- a/src/main/resources/templates/member/registerSeller.html
+++ b/src/main/resources/templates/member/registerSeller.html
@@ -18,24 +18,24 @@
 							<tr>
 								<th><span class="essential">*</span>아이디</th>
 								<td>
-									<input type="text" name="km_uid" placeholder="아이디를 입력" required th:field="*{uid}"/>
+									<input type="text" name="km_uid" placeholder="아이디를 입력" required th:field="*{uid}" th:maxlength="12"/>
 									<button type="button" id="btnId" class="btn btnCheck">조회</button>
-									<span class="msgSId">&nbsp;&nbsp;영문, 숫자로4~12자까지 설정해 주세요.</span>
+									<span class="msgSId">&nbsp;&nbsp;영문, 숫자로4~12자까지 설정해 주세요.</span> <br>
 									<span class="msgId1"></span>
 								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>비밀번호</th>
 								<td>
-									<input type="password" name="km_pass1" placeholder="비밀번호를 입력" required th:field="*{pass}" />
+									<input type="password" name="km_pass1" placeholder="비밀번호를 입력" required th:field="*{pass}" th:maxlength="12" />
 									<span class="msgPass">&nbsp;&nbsp;영문,숫자, 특수문자를 조합하여 8~12자까지 설정해 주세요.</span>
 								</td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>비밀번호확인</th>
 								<td>
-									<input type="password" name="km_pass2" placeholder="비밀번호를 확인" required />
-									<span class="msgPass">&nbsp;&nbsp;비밀번호재입력</span>
+									<input type="password" name="km_pass2" placeholder="비밀번호를 확인" required th:maxlength="12"/>
+									<span class="msgPass">&nbsp;&nbsp;비밀번호재입력</span> <br>
 									<span class="msgPass1"></span>
 								</td>
 							</tr>
@@ -63,7 +63,7 @@
 							<tr>
 								<th><span class="essential">*</span>사업자등록번호</th>
 								<td>
-									<input type="text" name="kms_corp_reg" placeholder="사업자등록번호 입력" required th:field="*{bizRegNum}" />
+									<input type="text" name="kms_corp_reg" placeholder="사업자등록번호 입력" required th:field="*{bizRegNum}" th:maxlength="12" />
 									<span class="msgCorp">&nbsp;&nbsp;-표시 포함 12자리 입력, 예) 123-45-67890</span> <br>
 									<span class="msgCorp1"></span>
 								</td>
@@ -79,7 +79,7 @@
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>전화번호</th>
-								<td><input type="text" name="kms_tel" placeholder="전화번호 입력" required th:field="*{tel}" />
+								<td><input type="text" name="kms_tel" placeholder="전화번호 입력" required th:field="*{tel}" th:maxlength="13" />
 									<span class="msgTel">&nbsp;&nbsp;- 표시 포함,지역번호 포함, 예) 02-234-1234</span> <br>
 									<span class="msgTel1"></span>
 								</td>
@@ -87,7 +87,7 @@
 							<tr>
 								<th><span class="essential">*</span>팩스번호</th>
 								<td>
-									<input type="text" name="kms_fax" placeholder="팩스번호 입력" required th:field="*{fax}" />
+									<input type="text" name="kms_fax" placeholder="팩스번호 입력" required th:field="*{fax}" th:maxlength="13" />
 									<span class="msgFax">&nbsp;&nbsp;- 표시 포함,지역번호 포함, 예) 02-234-1234</span> <br>
 									<span class="msgFax1"></span>
 								</td>
@@ -95,7 +95,7 @@
 							<tr>
 								<th><span class="essential">*</span>EMAIL</th>
 								<td>
-									<input type="email" name="km_email" placeholder="이메일 입력" required th:field="*{email}"/>
+									<input type="email" name="km_email" placeholder="이메일 입력" required th:field="*{email}"/> <br>
 									<span class="msgEmail"></span>
 								</td>
 							</tr>
@@ -129,8 +129,8 @@
 							<tr>
 								<th><span class="essential">*</span>휴대폰</th>
 								<td>
-									<input type="text" name="kms_managerHp" maxlength="13" placeholder="휴대폰번호 입력" required  th:field="*{managerHp}"/>
-									<span class="msgHp">&nbsp;&nbsp;-포함 13자리를 입력하세요.</span>
+									<input type="text" name="kms_managerHp" maxlength="13" placeholder="휴대폰번호 입력" required  th:field="*{managerHp}" th:maxlength="13"/>
+									<span class="msgHp">&nbsp;&nbsp;-포함 13자리를 입력하세요.</span> <br>
 									<span class="msgManagerHp1"></span>
 								</td>
 							</tr>
@@ -143,8 +143,8 @@
 				</form>
 				<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 				<script th:src="@{/js/zipcode.js}"></script>
-				<!--<script th:src="@{/js/validation.js}"></script> -- 후에 추가
-				<script th:src="@{/js/memberCheck.js}"></script>-->
+				<script th:src="@{/js/validation.js}"></script>
+				<script th:src="@{/js/memberCheck.js}"></script>
             </div>
         </main>        
 
