--- a/src/main/resources/templates/cs/faq/view.html
+++ b/src/main/resources/templates/cs/faq/view.html
@@ -8,16 +8,11 @@
     </nav>
 
     <div class="content">
-      <p>
-        [[${view.content}]]
-      </p>
-      <p>
-        ※ 피싱 관련 피해신고<br /><br />
-        ▶ 경찰청 사이버수사국 (국번없이)182 :
-        http://cyberbureau.police.go.kr<br />
-        ▶ KISA 인터넷침해대응센터 (국번없이)118 :
-        http://www.krcert.or.kr<br />
-        감사합니다.<br />
+      <p th:utext="${view.brContent}"></p>
+      <p article th:replace="~{/fragments/cs_report}">
+
+        <!-- 주의사항 들어갈 위치! -->
+
       </p>
     </div>
     <a th:href="@{/cs/faq/list}" class="btnList">목록보기</a>
